fix: use object-fit cover for support card image to remove white space

--- a/style.css
+++ b/style.css
@@ -1256,7 +1256,7 @@ nav ul {
 .support-image img {
     width: auto;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
     display: block;
 }
 
